// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal select renders correctly 1`] = `
<select
  className="lui-select"
  value="Value"
/>
`;

exports[`Select passes props correctly 1`] = `
<select
  className="lui-select my-class"
  data-x="x"
  onChange={[MockFunction]}
  title="Title"
/>
`;

exports[`Select with modifiers renders correctly 1`] = `
<select
  className="lui-select lui-select--inverse"
  value="Value"
/>
`;

exports[`Select with states renders correctly 1`] = `
<select
  className="lui-select"
  disabled={true}
  invalid={true}
  value="Value"
/>
`;
